# claude-data-viz

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cap.rs  commands.rs  fs_watcher.rs  lib.rs  main.rs  persistence.rs  state.rs  transcript.rs  types.rs  watcher.rs
src-tauri/src/ssh/: cache.rs  config.rs  connection.rs  dir_paginate.rs  known_hosts.rs  mod.rs  registry.rs  transcript.rs  watcher.rs
src/components/: ChangeRemoteFolderDialog.tsx  ConnectRemoteDialog.tsx  EmptyState.tsx  FirstRunPicker.tsx  FollowToggle.tsx  HtmlView.tsx  PdfView.tsx  RemoteAssetGate.tsx  SettingsDialog.tsx  Sidebar.tsx  TopBar.tsx  TranscriptsDirBanner.tsx  Viewer.tsx  VizCard.tsx
src/lib/: hotkeys.ts  log.ts  mime.ts  tauri.ts
src/store/: vizStore.ts
src/types/: tinykeys.d.ts
src/types/bindings/: HostKeyChangedInfo.ts  InitialState.ts  RecentRemote.ts  RemoteDirListing.ts  SshAgentProbe.ts  SshHostEntry.ts  TestResult.ts  TestStage.ts  TranscriptsDirInfo.ts  TranscriptsDirSource.ts  UnknownHostInfo.ts  VizEnriched.ts  VizEvicted.ts  VizGone.ts  VizItem.ts  VizKind.ts  VizStatus.ts  VizUpdated.ts  Watch.ts  WatchSource.ts  WatchStatus.ts  WatchStatusEvent.ts
src/viewers/: CsvViewer.tsx  HtmlViewer.tsx  ImageViewer.tsx  PdfViewer.tsx  index.ts  registry.ts
src/viewers/data/: DataTable.tsx  types.ts
