[package]
name = "claude-data-viz"
version = "0.1.0"
description = "Live viewer for Claude Code visualizations"
authors = ["pspenano"]
edition = "2021"

[lib]
name = "claude_data_viz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-full = "0.4"
tokio = { version = "1", features = ["full"] }
globset = "0.4"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
ts-rs = { version = "10", features = ["serde-compat", "no-serde-warnings"] }
once_cell = "1"
parking_lot = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }

russh = "0.49"
russh-keys = "0.49"
russh-sftp = "2.0"
async-trait = "0.1"
ssh2-config = "0.5"
filetime = "0.2"
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2"

[dev-dependencies]
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
